// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleOfSignificanceTemplate component should render default view 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        style="color: rgba(0, 0, 0, 0.5);"
      >
        First
         listed author 
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        id="scale-item-0"
      >
        Missing
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-b1im03-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        id="statement-item-0"
      />
    </div>
  </div>
</div>
`;

exports[`ScaleOfSignificanceTemplate component should render with author name 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        style="color: rgba(0, 0, 0, 0.5);"
      >
        First
         listed author 
        (author)
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        id="scale-item-0"
      >
        Missing
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-b1im03-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        id="statement-item-0"
      />
    </div>
  </div>
</div>
`;
